--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -69,9 +69,9 @@
       <div class="container col-md-9">
           <h3>Model Library</h3>
       <button class="btn btn-block btn-primary" name="update" type="button" onclick="updateModels()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Update list</button>
-    <div id="modellist">
+    <ul id="modellist" class="thumbnails">
     LIST OF MODELS SHOULD GO HERE
-    </div>
+    </ul>
           </div>
   </body>
 </html>
