Implementando el estilo de la página web

--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -62,7 +62,7 @@
       </div>
         <div class="container col-md-3">
             <h3>Selected variables</h3>
-            <ul class="sidebar-nav" id="variablelist">
+            <ul class="sidebar-nav" id="variablelist" class="thumbnails">
                     VARIABLES SHOULD GO HERE
             </ul>
         </div>
