--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -1,33 +1,19 @@
 <!DOCTYPE HTML>
-<footer class="footer" id="footer">
-        <!-- <div class="container-fluid">  -->
-            <div class="container col-md-6 col-sm-6">
-                <ul class="nav">
-                    <li><a href="#">Home</a>
-                    </li>
-                    <li><a href="./editor.html">Editor</a>
-                    </li>
-                    <li><a href="./about.html">About</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="container text-center col-md-6 col-sm-6">
-                <p>Visual Environment for Augmented Reality Development (VEARD).</p>
-                <p class="header">join us on</p>
-                <ul class="list-inline">
-                    <li>
-                        <a href="https://twitter.com/Glidder_" target="_blank">
-                            <img class="icon" src="./img/twitter.png" alt="Twitter icon" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/" target="_blank">
-                            <img class="icon" src="./img/fb.png" alt="Facebook icon"/>
-                        </a>
-                    </li>
-                </ul>
+<footer class="footer  text-center" id="footer">
 
-                <span>&copy; 2015</span> Luis José Quintana Bolaño
+            <div class=" container footcont">
+                <ul class="nav">
+                    <li><a href="index.html">Home</a>
+                    </li>
+                    <li><a href="editor.html">Editor</a>
+                    </li>
+                    <li><a href="about.html">About</a>
+                    </li>
+                </ul>
+            <!--/div>
+            <div class="container text-center col-md-6"-->
+                <p>Visual Environment for Augmented Reality Development (VEARD).<br>
+
+                <span>&copy; 2017</span> Luis José Quintana Bolaño </p>
             </div>
-       <!-- </div> -->
 </footer>
