Implementando el estilo de la página web

--- a/WebContent/editor_assets.html
+++ b/WebContent/editor_assets.html
@@ -60,13 +60,13 @@
     	   <button name="submit" class="btn btn-primary" type="submit" onclick="updateModels()"><span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> Upload</button>
         </form>
       </div>
-        <div class="container col-md-3">
+        <div class="container col-md-3 graycont">
             <h3>Selected variables</h3>
             <ul class="sidebar-nav" id="variablelist" class="thumbnails">
                     VARIABLES SHOULD GO HERE
             </ul>
         </div>
-      <div class="container col-md-9">
+      <div class="container col-md-9 text-center">
           <h3>Model Library</h3>
       <button class="btn btn-block btn-primary" name="update" type="button" onclick="updateModels()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Update list</button>
     <ul id="modellist" class="thumbnails">
