Implementando el estilo de la página web

--- a/WebContent/editor_frame.html
+++ b/WebContent/editor_frame.html
@@ -44,6 +44,12 @@
         		</block>
         	</value>
         </block>
+            <block type="load">
+        	<value name="obj">
+        		<block type="model">
+        		</block>
+        	</value>
+        </block>
           <block type="animate">
         	<value name="animation">
         		<block type="animation">
