Implementando el estilo de la página web

--- a/WebContent/editor_frame.html
+++ b/WebContent/editor_frame.html
@@ -44,7 +44,7 @@
         		</block>
         	</value>
         </block>
-            <block type="load">
+            <block type="hide">
         	<value name="obj">
         		<block type="model">
         		</block>
