--- a/WebContent/editor_view.html
+++ b/WebContent/editor_view.html
@@ -102,7 +102,7 @@
 
 <body>
 	<video id="video" width=640 height=480 autoplay="true" style="display:none;"></video>
-	<img id="image" width=640 height=480 src="img/test.png" style="display:none;"></img>
+	<!--img id="image" width=640 height=480 src="img/test.png" style="display:none;"></img-->
 	<div style="width: 100%;">
     <div style="width: 650px; margin-left:auto; margin-right:auto;">
     <div id="container" style="width: 640px; height: 480px; float: left; border: solid 1px black; background: green;">
