--- a/WebContent/viewer.html
+++ b/WebContent/viewer.html
@@ -30,5 +30,6 @@
 		</td></tr></table>
   	<div id='footer'></div>
 <script src="./js/viewer.js"></script>
+    <script src="./js/editor.js"></script>
 </body></html>
 
