testing viewer fix

--- a/WebContent/viewer.html
+++ b/WebContent/viewer.html
@@ -16,7 +16,12 @@
 	
 	<link href="./css/style.css" rel="stylesheet">
 	<script src="./js/core.js"></script>
-	
+<script type="text/javascript" src="js/Blockly/blockly_compressed.js"></script>     
+<script type="text/javascript" src="js/Blockly/blocks_compressed.js"></script>     
+<script type="text/javascript" src="js/Blockly/javascript_compressed.js"></script>     
+<script type="text/javascript" src="js/Blockly/msg/js/en.js"></script>     
+<script type="text/javascript" src="js/Blockly/custom/ARCblocks.js"></script>	
+
 	<title>Editor | VEARD | Visual Environment for Augmented Reality Development</title>
 </head>
 <body role="document">
